# arrakis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/components/: animation.h  boxcollider.h  physics.h  playercontrolled.h  position.h  rendering.h
src/core/: constants.h  game.cpp  game.h  gameobjects.cpp  gameobjects.h  message.h  messagereceiver.h  server.cpp  server.h
src/systems/: animations.cpp  animations.h  input.cpp  input.h  inputsystem.cpp  inputsystem.h  networking.cpp  networking.h  physics.cpp  physics.h  physicssystem.cpp  physicssystem.h  playercontroller.cpp  playercontroller.h  playercontrollersystem.cpp  playercontrollersystem.h  rendering.cpp  rendering.h  renderingsystem.cpp  renderingsystem.h
src/utils/: vec2.h
